fixed daily specials top margin and padding to prevent contents being covered by nav

--- a/src/components/cards/specials/specials.css
+++ b/src/components/cards/specials/specials.css
@@ -3,7 +3,9 @@
     display: flex;
     flex-direction: column;
     gap: 2rem;
-    margin: 6rem 0;
+    margin-top: 1rem;
+    padding-top: 5rem;
+    padding-bottom: 6rem;
 }
 
 .daily-specials>div:first-of-type {
